--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+      <!--Meta tags for search engines -->
+  <meta name="description" content="computer game, children's computer game, Rock-Paper-Scissor-Lizard-Spock ">
+  <meta name="keywords"
+    content="computer game, children's computer game, Rock-Paper-Scissor-Lizard-Spock">
+  <!--Title -->
+  <title>Rock-Paper-Scissor-Lizard-Spock</title>
+  <!-- Favicon -->
+
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
