--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
       <!--Meta tags for search engines -->
   <meta name="description" content="computer game, children's computer game, Rock-Paper-Scissor-Lizard-Spock ">
   <meta name="keywords"
     content="computer game, children's computer game, Rock-Paper-Scissor-Lizard-Spock">
+     <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="assets/favicon/rpsfavicon.ico">
   <!--Title -->
   <title>Rock-Paper-Scissor-Lizard-Spock</title>
   <!-- Favicon -->
