added the start action area and picture choices to the main body of html

--- a/index.html
+++ b/index.html
@@ -56,13 +56,39 @@
             <p><i class="far fa-hand-spock"></i> Spock smashes Scissors<i class="far fa-hand-scissors"></i></p> 
         </div>
     </div>
-</div>
-
 </header>
 
 <!-- Main content-->
 
-</header>
+        <!-- Start the action area -->
+    <div id="play-action">
+            <p>Ready, steady, go? </p>
+            <p>Click on your choice! </p>
+        <div>
+            <p id="action-message"></p>
+        </div>
+    </div>
+
+    <!-- the picture choices-->
+
+    <div class="choices">
+        <div class="choice" id="rock">
+            <img src="assets/images/crystal.png" alt="rock-clip-art">
+        </div>
+        <div class="choice" id="paper">
+            <img src="assets/images/paper.png" alt="paper-clip-art-clip-art">
+        </div>
+        <div class="choice" id="scissors">
+         <img src="assets/images/scissors.png" alt="scissors-clip-art">
+        </div>
+        <div class="choice" id="lizard">
+         <img src="assets/images/lizard.png" alt="lizard-clip-art">
+        </div>
+        <div class="choice" id="spock">
+         <img src="assets/images/spock.png" alt="spock-clip-art">
+        </div>
+    </div>
+
 
 </body>
 </html>
