--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
         </div>
     </div>
 
+    <!-- the score area-->
+
+    <div class="score-board">
+        <div id="player-label" class="badge">Player</div>
+        <div id="computer-label" class="badge">Comp</div>
+        <span id="player-score">0</span>:<span id="computer-score">0</span >
+    </div>
+
 
 </body>
 </html>
