added meta tags for search engines and favicon

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <!--Meta tags for search engines -->
+    <meta name="description" content="Rock-Paper-Scissor Game, Children's game Computer game">
+    <meta name="keywords" content="Rock-Paper-Scissor Game, Children's game Computer game">
+      <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/favicon/rpsfavicon.ico">
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
+
 <body>
     <header>
         <!-- colored title-->
